<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true">

        <include
            android:id="@+id/toolbarHeadlines"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/llSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarHeadlines">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/top_headlines_category_label"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/groupSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbAll"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_all_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbBusiness"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_business_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbEntertainment"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_entertainment_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbGeneral"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_general_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbHealth"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_health_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbScience"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_science_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbSports"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_sports_label"
                    android:textSize="@dimen/subtext_text_size" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbTechnology"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_technology_label"
                    android:textSize="@dimen/subtext_text_size" />

            </RadioGroup>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>