<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="2dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivNewsList"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_no_photo"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="3"
            android:text="@string/title_sample"
            android:textColor="@color/text_color_primary"
            android:ellipsize="end"
            android:textSize="@dimen/body_text_size"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/ivNewsList"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAuthorNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/author_sample"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/caption_text_size"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintBottom_toBottomOf="@+id/ivNewsList"
            card_view:layout_constraintEnd_toStartOf="@+id/ibFavourite"
            card_view:layout_constraintStart_toEndOf="@+id/ivNewsList"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDateNews"
            card_view:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvDateNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/date_sample_rv"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/caption_text_size"
            card_view:layout_constraintBottom_toBottomOf="@+id/ivNewsList"
            card_view:layout_constraintStart_toStartOf="@+id/tvAuthorNews" />

        <ImageButton
            android:id="@+id/ibFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/image_button_description"
            android:src="@drawable/ic_cache"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>