<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">
        <include
            android:id="@+id/toolbarNewsDescription"
            layout="@layout/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/ivDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDescription"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="56dp"
            android:background="#f2f2f2"
            android:contentDescription="@string/image_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_no_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/date_sample"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/caption_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/author_sample"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/caption_text_size"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/title_sample"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/subtext_text_size"
            app:layout_constraintTop_toBottomOf="@+id/ivDescription" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/description_sample"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

        <Button
            android:id="@+id/btnWeb"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:text="@string/go_to_web_button"
            android:textColor="@color/color_accent"
            app:layout_constraintEnd_toEndOf="@+id/tvBody"
            app:layout_constraintTop_toBottomOf="@+id/tvBody" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_star_border"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@+id/ivDescription"
            app:layout_constraintEnd_toEndOf="@+id/ivDescription"
            app:layout_constraintTop_toBottomOf="@+id/ivDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>